--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ repositories {
 	maven { url "https://api.modrinth.com/maven" }
 	maven { url "https://maven.lenni0451.net/everything" }
 	maven { url "https://repo.viaversion.com/" }
-	maven { url "https://repo.opencollab.dev/maven-snapshots/" }
+    maven { url "https://repo.opencollab.dev/maven-snapshots/" }
 	maven { url "https://maven.terraformersmc.com/" }
 }
 
@@ -60,7 +60,7 @@ dependencies {
 	modRuntimeOnly "maven.modrinth:sodium-extra:mc1.21.4-0.6.1+fabric"
 	modRuntimeOnly "maven.modrinth:lithium:mc1.21.4-0.14.7-fabric"
 	modRuntimeOnly "maven.modrinth:in-game-account-switcher:WBbjirJP"
-    modImplementation "com.viaversion:viafabricplus:4.0.2"
+    modJij "com.viaversion:viafabricplus:4.0.2"
 	modRuntimeOnly "maven.modrinth:immediatelyfast:1.3.3+1.21.4-fabric"
 	modRuntimeOnly "maven.modrinth:entityculling:NkBXk0Ye"
 
